# esp32-cam-positioning

./: .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini  sdkconfig  sdkconfig.esp32cam.old  sdkconfig.old  todo.md  todo.txt
components/: wifi_config_view
frontend/: index.html  index_src.html
include/: camera.h  defs.h  find_sun.h  index_html.h  my_servos.h  my_vector.h  webserver.h  wifi.h
include/img_processing/: ORB_defs.h  camera.h  dbscan.h  defs.h  find_sun.h  follow_obj_in_img.h  operating_with_fb.h  photographer.h  predictor.h  recognizer.h  vision_defs.h
include/server/: index_html.h  setting_mdns.h  webserver.h  wifi.h
lib/: README.md
rc/: index.html
src/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  defs.h  esp_things.c  find_sun.c  index_html.h  main.c  my_vector.c  servos.c  webserver.c  webserver.h  wifi.c
src/img_processing/: camera.c  find_sun.c  follow_obj_in_img.c  operating_with_fb.c  photographer.c  predictor.c  recognizer.c
src/img_processing/ORB/: fast9.c  vision.c
src/img_processing/vision/: dbscan.c  fast9.c  vision.c
src/server/: setting_mdns.c  webserver.c  wifi.c
unused/: style.css
